css/main.css
/*! HTML5 Boilerplate v5.3.0 | MIT License | https://html5boilerplate.com/ */

/*
 * What follows is the result of much research on cross-browser styling.
 * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
 * Kroc Camen, and the H5BP dev community and team.
 */

/* ==========================================================================
   Base styles: opinionated defaults
   ========================================================================== */

html {
    color: #222;
    font-size: 1em;
    line-height: 1.4;
}

/*
 * Remove text-shadow in selection highlight:
 * https://twitter.com/miketaylr/status/12228805301
 *
 * These selection rule sets have to be separate.
 * Customize the background color to match your design.
 */

::-moz-selection {
    background: #b3d4fc;
    text-shadow: none;
}

::selection {
    background: #b3d4fc;
    text-shadow: none;
}

/*
 * A better looking default horizontal rule
 */

hr {
    display: block;
    height: 1px;
    border: 0;
    border-top: 1px solid #ccc;
    margin: 1em 0;
    padding: 0;
}

/*
 * Remove the gap between audio, canvas, iframes,
 * images, videos and the bottom of their containers:
 * https://github.com/h5bp/html5-boilerplate/issues/440
 */

audio,
canvas,
iframe,
img,
svg,
video {
    vertical-align: middle;
}

/*
 * Remove default fieldset styles.
 */

fieldset {
    border: 0;
    margin: 0;
    padding: 0;
}

/*
 * Allow only vertical resizing of textareas.
 */

textarea {
    resize: vertical;
}

/* ==========================================================================
   Browser Upgrade Prompt
   ========================================================================== */

.browserupgrade {
    margin: 0.2em 0;
    background: #ccc;
    color: #000;
    padding: 0.2em 0;
}

/* ==========================================================================
   Author's custom styles
   ========================================================================== */
/*sets the logos height and locaitons */
.brand-small>img{
    height:45px;
    width: 81;
}

.brand-big>img{
    height: 40px;
    display: block;
    margin-top: 3px;
}

.lock-logo{
    height: 25px;
    float: right;
    margin-top:0px;
    margin-right: 10px;

}
/*sets the genreal style for body and titles */
body{
    background: #4c4c4c url("../img/metal.jpg") repeat left top;
    height: 100%;
}
h1{
    padding-top: 0;
    margin-top: 0;
}
h1.titles{
    font-family: 'Arvo', serif;;
    color: #406bb4;
    font-size: 45px;
}
.titles{
    font-family: 'Arvo', serif;;
    color: #406bb4;
    font-size: 45px;
}
ul.pad-left{
    padding-left: 0px;
}
ul{
    list-style-type: none;
}
/*set the carousel on main page */
.carousel-caption{
    font-family: 'Arvo', serif;
    color: #0d3881;
    top: 0;
    bottom: auto;
}

.carousel-caption-item3{
    bottom: 0;
    top:auto;
}
.carousel-caption>h3{
    font-size: 50px;
}

.carousel-caption>p{
    font-size: 25px;
    color: black;
}
.slide1{
    text-align: left;
    margin-left: -15%;
}

.slide2{
    margin-left: -30%;
}

.slide3{
    color: black;
    margin-bottom: 17%; 
}
/* panel settings */
.panel{
    margin-top: 10px;
    background-color: #333333;
    border-color: #666666;
    width: 100%;
}

.panel-title{
    font-size: 36px;
    font-family: 'Arvo', serif;
}

.panel-body{
    color: #cbcbcb;

}
.panel > .panel-heading {
    background-image: none;
    background-color: #666666;
    color: #0d3881;
    border-width: 0;

}

.flex, .flex > div[class*='col-'] {  
    display: -webkit-box;
    display: -moz-box;
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;
    flex:1 0 auto;
}
/*store hours title */
.store-hr{
    font-size: 25px;
}
/*hours spacing */
.store-hours{
    float: right;
}

/*about page */
.thumbnail-services{
    background-color: #333333;
    border-width: 0;
    margin-right: 10px;
}

.about-img{
    margin-right:10px;
    width: 400px;

}

.about-panel{
    margin-left: 20px;
}

.about-text{
    color: #cbcbcb;
}
/*home page */
.hours-text>p{
    font-size: 18px;
}

.location-text{
    padding-left: 10px;
}

.location-text>p{
    font-size: 25px;

}
.home-map>img{
    width: 335px;
    float: left;
    margin-right: 10px;


}
/* contact page */

.contact-text{
    font-size: 25px;
}
.contact-text>b{}

/* nav bar settings */
.main-navbar{
    white-space:nowrap

}

.navbar-nav {
  float: bottom;
  text-align: center;
}
.phnum{
    color: #001f68;
    font-size: 35px;
    margin-top: -10px;
    padding-bottom: -25px;
    margin-bottom: -25px;

}


.navbar-nav>li {
  display: inline;
  font-size: 30px;
  font-family: 'Arvo', serif;
}

.navbar-brand{
    padding-top: 0px;
    display: block;
}
.navbar-default {
  background-color: #5a5b5b;
  border-width: 0px;
  margin-bottom: 0px;
}
.navbar-default .navbar-brand {
  color: #cbcbcb;
}
.navbar-default .navbar-brand:hover,
.navbar-default .navbar-brand:focus {
  color: #4c4c4c;
}
.navbar-default .navbar-text {
  color: #cbcbcb;
}
.navbar-default .navbar-nav > li > a {
  color: #cbcbcb;
}
.navbar-default .navbar-nav > li > a:hover,
.navbar-default .navbar-nav > li > a:focus {
  color: #4c4c4c;
}
.navbar-default .navbar-nav > .active > a,
.navbar-default .navbar-nav > .active > a:hover,
.navbar-default .navbar-nav > .active > a:focus {
  color: #4c4c4c;
  background-color: #999999;
}
.navbar-default .navbar-nav > .open > a,
.navbar-default .navbar-nav > .open > a:hover,
.navbar-default .navbar-nav > .open > a:focus {
  color: #4c4c4c;
  background-color: #999999;
}
.navbar-default .navbar-toggle {
  border-color: #999999;
}
.navbar-default .navbar-toggle:hover,
.navbar-default .navbar-toggle:focus {
  background-color: #999999;
}
.navbar-default .navbar-toggle .icon-bar {
  background-color: #cbcbcb;
}
.navbar-default .navbar-collapse,
.navbar-default .navbar-form {
  border-color: #cbcbcb;
}
.navbar-default .navbar-link {
  color: #cbcbcb;
}
.navbar-default .navbar-link:hover {
  color: #4c4c4c;
}

/*footer seetings*/
.footie>li{
    float: none;
    font-size: 10px;
    display: inline-block;

}
.footie-fixed{
    float: none;
    margin: 0 auto;

}

.error{
    text-align: center;

}

.error-panel{
    margin-top: 10%;
    margin-bottom: 0 auto;
}
.error-link{
    text-align: center;
    color: #c0cbcb;
}

.licensed-text{

    font-size: 12PX;
    font-weight: bold;
    color: #22558C;
    max-width: 50%;
    text-align: center;
    margin-left: 25%;
    margin-right: 0 auto;
    margin-top: 45%%;
    margin-bottom: 0 auto;+
}















/* ==========================================================================
   Helper classes
   ========================================================================== */

/*
 * Hide visually and from screen readers
 */

.hidden {
    display: none !important;
}

/*
 * Hide only visually, but have it available for screen readers:
 * http://snook.ca/archives/html_and_css/hiding-content-for-accessibility
 */

.visuallyhidden {
    border: 0;
    clip: rect(0 0 0 0);
    height: 1px;
    margin: -1px;
    overflow: hidden;
    padding: 0;
    position: absolute;
    width: 1px;
}

/*
 * Extends the .visuallyhidden class to allow the element
 * to be focusable when navigated to via the keyboard:
 * https://www.drupal.org/node/897638
 */

.visuallyhidden.focusable:active,
.visuallyhidden.focusable:focus {
    clip: auto;
    height: auto;
    margin: 0;
    overflow: visible;
    position: static;
    width: auto;
}

/*
 * Hide visually and from screen readers, but maintain layout
 */

.invisible {
    visibility: hidden;
}

/*
 * Clearfix: contain floats
 *
 * For modern browsers
 * 1. The space content is one way to avoid an Opera bug when the
 *    `contenteditable` attribute is included anywhere else in the document.
 *    Otherwise it causes space to appear at the top and bottom of elements
 *    that receive the `clearfix` class.
 * 2. The use of `table` rather than `block` is only necessary if using
 *    `:before` to contain the top-margins of child elements.
 */

.clearfix:before,
.clearfix:after {
    content: " "; /* 1 */
    display: table; /* 2 */
}

.clearfix:after {
    clear: both;
}
/*my additions*/
@media (max-width: 767px) {
    .navbar-default .navbar-nav .open .dropdown-menu > li > a {
        color: #cbcbcb;
    }

    .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover,
    .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
    color: #4c4c4c;
    }

    .navbar-default .navbar-nav .open .dropdown-menu > .active > a,
    .navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover,
    .navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
    color: #4c4c4c;
    background-color: #999999;
    }

    .navbar-nav>li {
  display: block;
    }


    .carousel-caption>h3{
        font-size: 25px;
    }

    .carousel-caption>p{
        font-size: 12px;
        color: black;
    }

    .phonetext{
        float: center;
        margin: 0 auto;
        text-align: center;
    }

    .phnum{
        margin-left: 0;
        
    }


}

/* ==========================================================================
   EXAMPLE Media Queries for Responsive Design.
   These examples override the primary ('mobile first') styles.
   Modify as content requires.
   ========================================================================== */

@media only screen and (min-width: 35em) {
    /* Style adjustments for viewports that meet the condition */
}

@media print,
       (-webkit-min-device-pixel-ratio: 1.25),
       (min-resolution: 1.25dppx),
       (min-resolution: 120dpi) {
    /* Style adjustments for high resolution devices */
}

/* ==========================================================================
   Print styles.
   Inlined to avoid the additional HTTP request:
   http://www.phpied.com/delay-loading-your-print-css/
   ========================================================================== */

@media print {
    *,
    *:before,
    *:after,
    *:first-letter,
    *:first-line {
        background: transparent !important;
        color: #000 !important; /* Black prints faster:
                                   http://www.sanbeiji.com/archives/953 */
        box-shadow: none !important;
        text-shadow: none !important;
    }

    a,
    a:visited {
        text-decoration: underline;
    }

    a[href]:after {
        content: " (" attr(href) ")";
    }

    abbr[title]:after {
        content: " (" attr(title) ")";
    }

    /*
     * Don't show links that are fragment identifiers,
     * or use the `javascript:` pseudo protocol
     */

    a[href^="#"]:after,
    a[href^="javascript:"]:after {
        content: "";
    }

    pre,
    blockquote {
        border: 1px solid #999;
        page-break-inside: avoid;
    }

    /*
     * Printing Tables:
     * http://css-discuss.incutio.com/wiki/Printing_Tables
     */

    thead {
        display: table-header-group;
    }

    tr,
    img {
        page-break-inside: avoid;
    }

    img {
        max-width: 100% !important;
    }

    p,
    h2,
    h3 {
        orphans: 3;
        widows: 3;
    }

    h2,
    h3 {
        page-break-after: avoid;
    }
}

